added SSH setup command

--- a/src/Extension/RemoteDebuggerLauncherUI/Resources.resx
+++ b/src/Extension/RemoteDebuggerLauncherUI/Resources.resx
@@ -208,6 +208,15 @@ Latest LTS:  The most recent Long Term Support release of .NET</value>
   <data name="PublishSuccess" xml:space="preserve">
     <value>Publishing application OK</value>
   </data>
+  <data name="PublishWaitDialogCaption" xml:space="preserve">
+    <value>Remote Debugger Launcher</value>
+  </data>
+  <data name="PublishWaitDialogMessageStart" xml:space="preserve">
+    <value>Publishing application ...</value>
+  </data>
+  <data name="PublishWaitDialogMessageUpdate" xml:space="preserve">
+    <value>Running dotnet publish ...</value>
+  </data>
   <data name="RemoteCommandCheckConnectionOutputPaneConnectingTo" xml:space="preserve">
     <value>Connecting to {0}@{1} ... </value>
     <comment>Remote command Check Connection: Connecting to text</comment>
@@ -349,5 +358,8 @@ Latest LTS:  The most recent Long Term Support release of .NET</value>
   </data>
   <data name="RemoteCommandUploadOutputPaneProgress" xml:space="preserve">
     <value>.</value>
+  </data>
+  <data name="ToolWindowCaption" xml:space="preserve">
+    <value>Remote Debugger Launcher</value>
   </data>
 </root>
